--- a/activities.html
+++ b/activities.html
@@ -35,8 +35,9 @@
 								<li>Doctoral visit, Department of Computer Science, KU Leuven (Belgium). February 2019 - June 2019.</li>
 							</ol>
 							
-							<h2>Roles</h2>
+							<h2>Reviewer and Related Roles</h2>
 							<ol>
+								<li>Reviewer: Several AI and logic venues: AAAI, IJCAI, AIJ, KR, EUMAS, AiML, LORI-7...</li>
 								<li>Program Chair: IJCAI 2021.</li>
 								<li>Co-organiser: <a href="http://www2.compute.dtu.dk/~tobo/trends-in-ai2/">2nd DTU Workshop on Current Trends in Artificial Intelligence</a>.</li>
 							</ol>
@@ -45,11 +46,8 @@
 							<ol>
 								<li><a href="https://www.floc2018.org/fopss/">FoPSS Summer School in Logic and Learning</a>. University of Oxford, UK. July 2018.</li>
 							</ol>
+			
 							
-							<h1>Reviewer</h1>
-							<ol>
-								<li>Several AI and logic venues: AAAI, IJCAI, AIJ, KR, EUMAS, AiML, LORI-7...</li>
-							</ol>
 						</section>
 					</div>
 			</div>
