--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,8 @@
                     <section>
                         <h1>Contact</h1>
                         <p>Email: <span id="email"></span></p>
+                        <p>Visiting address: Room D-507, C. de Alberto Aguilera, 25, 28015, Madrid, Spain.</p>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1518.521652138297!2d-3.7150978016052214!3d40.430039999999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4228662ebd8eeb%3A0xd7c09eaa5e0b0c59!2sHigher%20Technical%20School%20of%20Engineering%20(ICAI)!5e0!3m2!1sen!2ses!4v1720351554379!5m2!1sen!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <hr>
                     </section>
                 </div>
