--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,7 @@
 								<ol>
 									<li> <strong>Learning to Act and Observe in Partially Observable Domains.</strong> 
 										<br/> Thomas Bolander, Nina Gierasimczuk and Andrés Occhipinti Liberman. 
-										<br/> In <i>Dick de Jongh on Intuitionistic and Provability Logic</i>, Vol. 28 of Outstanding Contributions to Logic, Springer. To appear, April 2024.
+										<br/> In <i>Dick de Jongh on Intuitionistic and Provability Logic</i>, Part of the book series: Outstanding Contributions to Logic (OCTR, volume 28). Springer. 2024.
 										<br/> <a href="https://link.springer.com/book/9783031479205">[publisher link]</a> <a href="https://arxiv.org/pdf/2109.06076.pdf">[pre-print]</a>
 									</li>
 									<li> <strong>Learning First-Order Symbolic Planning Representations That Are Grounded.</strong> 
