--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer id="footer">
-        <div class="container">
+      <div class="container">
             <div style="display: inline-block; text-align: center; width: 22%;">
                 <img src="https://github.com/OpenLogicProject/portraits/blob/master/turing-circle.png?raw=true" alt="Alan Turing" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
                 <p style="font-size:10.5px">Alan Turing</p>
@@ -72,7 +70,18 @@
                 <li>Line art: Matthew Leadbeater</li>
             </ul>
         </div>
-    </footer>
+    
+    <!-- Footer -->
+				<footer id="footer">
+					<ul class="copyright">
+						<li>&copy; 2024 Andrés Occhipinti Liberman. </li>
+                        <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</footer>
+
+
+  
+
 
 </div>
 
