--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
         </div>
 
         <!-- Image Section -->
-        <section style="padding: 20px; text-align: center;">
+        <section style="padding: 20px; text-align: right;">
             <div style="display: inline-block; text-align: center; width: 22%; margin: 10px;">
-                <img src="https://raw.githubusercontent.com/OpenLogicProject/portraits/master/turing-circle.png" alt="Alan Turing" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
+                <img src="https://raw.githubusercontent.com/OpenLogicProject/portraits/master/turing-circle.png" alt="Alan Turing" style="max-width: 60%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
                 <p style="font-size: 10.5px;">Alan Turing</p>
             </div>
-            <div style="display: inline-block; text-align: center; width: 22%; margin: 10px;">
-                <img src="https://raw.githubusercontent.com/OpenLogicProject/portraits/master/kripke-circle.png" alt="Saul Kripke" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
+            <div style="display: inline-block; text-align: right; width: 22%; margin: 10px;">
+                <img src="https://raw.githubusercontent.com/OpenLogicProject/portraits/master/kripke-circle.png" alt="Saul Kripke" style="max-width: 60%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
                 <p style="font-size: 10.5px;">Saul Kripke</p>
             </div>
-            <div style="display: inline-block; text-align: center; width: 22%; margin: 10px;">
-                <img src="https://raw.githubusercontent.com/OpenLogicProject/portraits/master/lovelace-circle.png" alt="Ada Lovelace" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
+            <div style="display: inline-block; text-align: right; width: 22%; margin: 10px;">
+                <img src="https://raw.githubusercontent.com/OpenLogicProject/portraits/master/lovelace-circle.png" alt="Ada Lovelace" style="max-width: 60%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
                 <p style="font-size: 10.5px;">Ada Lovelace</p>
             </div>
-            <div style="display: inline-block; text-align: center; width: 22%; margin: 10px;">
-                <img src="https://raw.githubusercontent.com/OpenLogicProject/portraits/master/goedel-circle.png" alt="Kurt Gödel" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
+            <div style="display: inline-block; text-align: right; width: 22%; margin: 10px;">
+                <img src="https://raw.githubusercontent.com/OpenLogicProject/portraits/master/goedel-circle.png" alt="Kurt Gödel" style="max-width: 60%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
                 <p style="font-size: 10.5px;">Kurt Gödel</p>
             </div>
         </section>
