--- a/index.html
+++ b/index.html
@@ -11,76 +11,80 @@
     <meta property="og:title" content="Andrés Occhipinti Liberman" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://aocclib.github.io/" />
-    <meta property="og:description" content="Personal website of Andrés Occhipinti Liberman. Researcher in Artificial Intelligence."/>
+    <meta property=og:description content="Personal website of Andrés Occhipinti Liberman. Researcher in Artificial Intelligence."/>
     <meta property="og:image" content="https://aocclib.github.io/me2021_.jpg" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="canonical" href="https://aocclib.github.io/" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 <body class="is-preload">
-    <div id="page-wrapper">
-        <!-- Header -->
-        <header id="header">
-            <nav id="nav">
-                <ul>
-                    <li><a href="index.html">home</a></li>
-                    <li><a href="publications.html">publications</a></li>
-                    <li><a href="teaching.html">teaching</a></li>
-                    <li><a href="activities.html">activities</a></li>
-                    <li><a href="contact.html" class="button primary">contact</a></li>
-                </ul>
-            </nav>
-        </header>
+<div id="page-wrapper">
+    <!-- Header -->
+    <header id="header">
+        <nav id="nav">
+            <ul>
+                <li><a href="index.html">home</a></li>
+                <li><a href="publications.html">publications</a></li>
+                <li><a href="teaching.html">teaching</a></li>
+                <li><a href="activities.html">activities</a></li>
+                <li><a href="contact.html" class="button primary">contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-        <!-- Main -->
-        <div id="main" class="wrapper style1">
-            <div class="container">
-                <!-- Text -->
-                <h1>Andrés Occhipinti Liberman</h1>
-                <p>I am an assistant professor at <a href="https://www.comillas.edu/icai/">ICAI School of Engineering</a>, Department of Telematics and Computer Science, Comillas Pontifical University (Madrid, Spain). I teach courses in natural language processing, foundations of AI, and algorithms. My research focuses on learning dynamics models for automated planning. Currently, I am also exploring ways to improve the reasoning and planning abilities of LLMs. I am interested as well in theory-of-mind reasoning, epistemic planning and epistemic logics, which are areas I have previously worked on.</p>
-                <p>Before joining Comillas University, I worked as a postdoc in the <a href="https://www.upf.edu/web/ai-ml">Artificial Intelligence and Machine Learning Group</a> at Universitat Pompeu Fabra (Barcelona, Spain), as a member of the EU project <a href="https://rleap-project.github.io/">Representation Learning for Planning (RLeap)</a>. Prior to that, I was an external lecturer in the <a href="https://www.compute.dtu.dk/">Department of Applied Mathematics and Computer Science</a> at the Technical University of Denmark (DTU), where I also earned my Ph.D. in artificial intelligence and logic. I also hold an <a href="https://msclogic.illc.uva.nl/">M.Sc. in Logic</a> from the <a href="http://www.illc.uva.nl/">Institute for Logic, Language and Computation (ILLC)</a> at the University of Amsterdam.</p>
-                <p style="font-size:12.5px"><b>Keywords</b>: artificial intelligence, natural language processing, planning, logic, learning symbolic representations, learning world models.</p>
+    <!-- Main -->
+    <div id="main" class="wrapper style1">
+        <div class="container">
+            <!-- Text -->
+            <h1>Andrés Occhipinti Liberman</h1>
+            <p>I am an assistant professor at <a href="https://www.comillas.edu/icai/">ICAI School of Engineering</a>, Department of Telematics and Computer Science, Comillas Pontifical University (Madrid, Spain). I teach courses in natural language processing, foundations of AI, and algorithms. My research focuses on learning dynamics models for automated planning. Currently, I am also exploring ways to improve the reasoning and planning abilities of LLMs. I am interested as well in theory-of-mind reasoning, epistemic planning and epistemic logics, which are areas I have previously worked on.</p>
+            <p>Before joining Comillas University, I worked as a postdoc in the <a href="https://www.upf.edu/web/ai-ml">Artificial Intelligence and Machine Learning Group</a> at Universitat Pompeu Fabra (Barcelona, Spain), as a member of the EU project <a href="https://rleap-project.github.io/">Representation Learning for Planning (RLeap)</a>. Prior to that, I was an external lecturer in the <a href="https://www.compute.dtu.dk/">Department of Applied Mathematics and Computer Science</a> at the Technical University of Denmark (DTU), where I also earned my Ph.D. in artificial intelligence and logic. I also hold an <a href="https://msclogic.illc.uva.nl/">M.Sc. in Logic</a> from the <a href="http://www.illc.uva.nl/">Institute for Logic, Language and Computation (ILLC)</a> at the University of Amsterdam.</p>
+            <p></p>
+
+            <p style="font-size:12.5px"><b>Keywords</b>: artificial intelligence, natural language processing, planning, logic, learning symbolic representations, learning world models.</p>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="container">
+            <div style="display: inline-block; text-align: center; width: 22%;">
+                <img src="https://github.com/OpenLogicProject/portraits/blob/master/turing-circle.png?raw=true" alt="Alan Turing" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
+                <p style="font-size:10.5px">Alan Turing</p>
+            </div>
+            <div style="display: inline-block; text-align: center; width: 22%;">
+                <img src="https://github.com/OpenLogicProject/portraits/blob/master/kripke-circle.png?raw=true" alt="Saul Kripke" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
+                <p style="font-size:10.5px">Saul Kripke</p>
+            </div>
+            <div style="display: inline-block; text-align: center; width: 22%;">
+                <img src="https://github.com/OpenLogicProject/portraits/blob/master/lovelace-circle.png?raw=true" alt="Ada Lovelace" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
+                <p style="font-size:10.5px">Ada Lovelace</p>
+            </div>
+            <div style="display: inline-block; text-align: center; width: 22%;">
+                <img src="https://github.com/OpenLogicProject/portraits/blob/master/goedel-circle.png?raw=true" alt="Kurt Gödel" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
+                <p style="font-size:10.5px">Kurt Gödel</p>
             </div>
         </div>
-
-        <!-- Image Section -->
-        <section style="padding: 20px; text-align: right;">
-            <div style="display: inline-block; text-align: center; width: 22%; margin: 10px;">
-                <img src="https://raw.githubusercontent.com/OpenLogicProject/portraits/master/turing-circle.png" alt="Alan Turing" style="max-width: 60%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
-                <p style="font-size: 10.5px;">Alan Turing</p>
-            </div>
-            <div style="display: inline-block; text-align: right; width: 22%; margin: 10px;">
-                <img src="https://raw.githubusercontent.com/OpenLogicProject/portraits/master/kripke-circle.png" alt="Saul Kripke" style="max-width: 60%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
-                <p style="font-size: 10.5px;">Saul Kripke</p>
-            </div>
-            <div style="display: inline-block; text-align: right; width: 22%; margin: 10px;">
-                <img src="https://raw.githubusercontent.com/OpenLogicProject/portraits/master/lovelace-circle.png" alt="Ada Lovelace" style="max-width: 60%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
-                <p style="font-size: 10.5px;">Ada Lovelace</p>
-            </div>
-            <div style="display: inline-block; text-align: right; width: 22%; margin: 10px;">
-                <img src="https://raw.githubusercontent.com/OpenLogicProject/portraits/master/goedel-circle.png" alt="Kurt Gödel" style="max-width: 60%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
-                <p style="font-size: 10.5px;">Kurt Gödel</p>
-            </div>
-        </section>
-
-        <!-- Footer -->
-        <footer id="footer">
+        <div class="container">
             <ul class="copyright">
                 <li>&copy; 2024 Andrés Occhipinti Liberman.</li>
                 <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                <li>Line Art: Matthew Leadbeater</li>
+                <li>Line art: Matthew Leadbeater</li>
             </ul>
-        </footer>
-    </div>
+        </div>
+    </footer>
 
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/jquery.dropotron.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+</div>
+
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/jquery.dropotron.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
+
 </body>
 </html>
