--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <p style="font-size:10.5px">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Alan Turing</p>
             </div>
             <div style="display: inline-block; text-align: center; width: 22%;">
-                <img src="https://github.com/OpenLogicProject/portraits/blob/master/kripke-circle.png?raw=true" alt="Saul Kripke" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
-                <p style="font-size:10.5px">Saul Kripke</p>
+                <img src="https://github.com/OpenLogicProject/portraits/blob/master/kripke-circle.png?raw=true" alt="Saul Kripke" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1); display: block; margin: 0 auto;">
+                <p style="font-size: 10.5px; text-align: center;">Saul Kripke</p>
             </div>
             <div style="display: inline-block; text-align: center; width: 22%;">
                 <img src="https://github.com/OpenLogicProject/portraits/blob/master/lovelace-circle.png?raw=true" alt="Ada Lovelace" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
