--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
             <p style="font-size:12.5px"><b>Keywords</b>: artificial intelligence, natural language processing, planning, logic, learning symbolic representations, learning world models.</p>
 
             <div style="display: inline-block; text-align: center; width: 22%;">
-                <img src="https://github.com/OpenLogicProject/portraits/blob/master/turing-circle.png?raw=true" alt="Alan Turing" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
-                <p style="font-size:10.5px">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Alan Turing</p>
+                <img src="https://github.com/OpenLogicProject/portraits/blob/master/turing-circle.png?raw=true" alt="Alan Turing" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1); display: block; margin: 0 auto;">
+                <p style="font-size:10.5px">Alan Turing</p>
             </div>
             <div style="display: inline-block; text-align: center; width: 22%;">
                 <img src="https://github.com/OpenLogicProject/portraits/blob/master/kripke-circle.png?raw=true" alt="Saul Kripke" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1); display: block; margin: 0 auto;">
                 <p style="font-size: 10.5px; text-align: center;">Saul Kripke</p>
             </div>
             <div style="display: inline-block; text-align: center; width: 22%;">
-                <img src="https://github.com/OpenLogicProject/portraits/blob/master/lovelace-circle.png?raw=true" alt="Ada Lovelace" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
+                <img src="https://github.com/OpenLogicProject/portraits/blob/master/lovelace-circle.png?raw=true" alt="Ada Lovelace" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1); display: block; margin: 0 auto;">
                 <p style="font-size:10.5px">Ada Lovelace</p>
             </div>
             <div style="display: inline-block; text-align: center; width: 22%;">
-                <img src="https://github.com/OpenLogicProject/portraits/blob/master/goedel-circle.png?raw=true" alt="Kurt Gödel" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1);">
+                <img src="https://github.com/OpenLogicProject/portraits/blob/master/goedel-circle.png?raw=true" alt="Kurt Gödel" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1); display: block; margin: 0 auto;">
                 <p style="font-size:10.5px">Kurt Gödel</p>
             </div>
         </div>
