--- a/index.html
+++ b/index.html
@@ -34,34 +34,35 @@
 
     <!-- Main -->
     <div id="main" class="wrapper style1">
-        <div class="container">
-            <!-- Text -->
-            <h1>Andrés Occhipinti Liberman</h1>
-            <p>I am an assistant professor at <a href="https://www.comillas.edu/icai/">ICAI School of Engineering</a>, Department of Telematics and Computer Science, Comillas Pontifical University (Madrid, Spain). I teach natural language processing, foundations of AI, and algorithms. My research focuses on learning dynamics models for automated planning. I am also exploring ways to improve the reasoning and planning abilities of LLMs. I am interested as well in theory-of-mind reasoning, epistemic planning and epistemic logics, which are topics I have previously worked on.</p>
-            <p>Before joining Comillas University, I worked as a postdoc in the <a href="https://www.upf.edu/web/ai-ml">Artificial Intelligence and Machine Learning Group</a> at Universitat Pompeu Fabra (Barcelona, Spain), as a member of the EU project <a href="https://rleap-project.github.io/">Representation Learning for Planning (RLeap)</a>. Prior to that, I was an external lecturer in the <a href="https://www.compute.dtu.dk/">Department of Applied Mathematics and Computer Science</a> at the Technical University of Denmark (DTU), where I also earned my Ph.D. in artificial intelligence and logic. I also hold an <a href="https://msclogic.illc.uva.nl/">M.Sc. in Logic</a> from the <a href="http://www.illc.uva.nl/">Institute for Logic, Language and Computation (ILLC)</a> at the University of Amsterdam.</p>
-            <p></p>
+    <div class="container">
+        <!-- Text -->
+        <h1>Andrés Occhipinti Liberman</h1>
+        <p>I am an assistant professor at <a href="https://www.comillas.edu/icai/">ICAI School of Engineering</a>, Department of Telematics and Computer Science, Comillas Pontifical University (Madrid, Spain). I teach natural language processing, foundations of AI, and algorithms. My research focuses on learning dynamics models for automated planning. I am also exploring ways to improve the reasoning and planning abilities of LLMs. I am interested as well in theory-of-mind reasoning, epistemic planning and epistemic logics, which are topics I have previously worked on.</p>
+        <p>Before joining Comillas University, I worked as a postdoc in the <a href="https://www.upf.edu/web/ai-ml">Artificial Intelligence and Machine Learning Group</a> at Universitat Pompeu Fabra (Barcelona, Spain), as a member of the EU project <a href="https://rleap-project.github.io/">Representation Learning for Planning (RLeap)</a>. Prior to that, I was an external lecturer in the <a href="https://www.compute.dtu.dk/">Department of Applied Mathematics and Computer Science</a> at the Technical University of Denmark (DTU), where I also earned my Ph.D. in artificial intelligence and logic. I also hold an <a href="https://msclogic.illc.uva.nl/">M.Sc. in Logic</a> from the <a href="http://www.illc.uva.nl/">Institute for Logic, Language and Computation (ILLC)</a> at the University of Amsterdam.</p>
+        <p></p>
 
-            <p style="font-size:12.5px"><b>Keywords</b>: artificial intelligence, natural language processing, planning, logic, learning symbolic representations, learning world models.</p>
+        <p style="font-size:12.5px"><b>Keywords</b>: artificial intelligence, natural language processing, planning, logic, learning symbolic representations, learning world models.</p>
 
-            <div style="display: inline-block; text-align: center; width: 22%;">
+        <div style="text-align: center; margin-left: auto; margin-right: auto;">
+            <div style="display: inline-block; text-align: center; width: 22%; margin-left: auto; margin-right: auto;">
                 <img src="https://github.com/OpenLogicProject/portraits/blob/master/turing-circle.png?raw=true" alt="Alan Turing" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1); display: block; margin: 0 auto;">
                 <p style="font-size: 10.5px; text-align: center;">Alan Turing</p>
             </div>
-            <div style="display: inline-block; text-align: center; width: 22%;">
+            <div style="display: inline-block; text-align: center; width: 22%; margin-left: auto; margin-right: auto;">
                 <img src="https://github.com/OpenLogicProject/portraits/blob/master/kripke-circle.png?raw=true" alt="Saul Kripke" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1); display: block; margin: 0 auto;">
                 <p style="font-size: 10.5px; text-align: center;">Saul Kripke</p>
             </div>
-            <div style="display: inline-block; text-align: center; width: 22%;">
+            <div style="display: inline-block; text-align: center; width: 22%; margin-left: auto; margin-right: auto;">
                 <img src="https://github.com/OpenLogicProject/portraits/blob/master/lovelace-circle.png?raw=true" alt="Ada Lovelace" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1); display: block; margin: 0 auto;">
                 <p style="font-size: 10.5px; text-align: center;">Ada Lovelace</p>
             </div>
-            <div style="display: inline-block; text-align: center; width: 22%;">
+            <div style="display: inline-block; text-align: center; width: 22%; margin-left: auto; margin-right: auto;">
                 <img src="https://github.com/OpenLogicProject/portraits/blob/master/goedel-circle.png?raw=true" alt="Kurt Gödel" style="max-width: 80%; border-radius: 50%; box-shadow: 0 0 0px rgba(0,0,0,0.1); display: block; margin: 0 auto;">
                 <p style="font-size: 10.5px; text-align: center;">Kurt Gödel</p>
             </div>
-
         </div>
     </div>
+</div>
     
     <!-- Footer -->
     <footer id="footer">
