--- a/index.html
+++ b/index.html
@@ -61,19 +61,10 @@
                 <p style="font-size: 10.5px; text-align: center;">Kurt Gödel</p>
             </div>
         </div>
-    </div>
 
-    
-    <!-- Footer -->
-    <footer id="footer">
-        <div class="container">
-            <ul class="copyright">
-                <li>&copy; 2024 Andrés Occhipinti Liberman.</li>
-                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                <li>Line art: Matthew Leadbeater</li>
-            </ul>
-        </div>
-    </footer>
+        <p style="font-size:12.5px">&copy; 2024 Andrés Occhipinti Liberman. Web design based on: <a href="http://html5up.net">HTML5 UP</a>. Line art drawings: Matthew Leadbeater</p>
+
+    </div>
 
 </div>
 
