--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
 
-        <p style="font-size:12.5px">&copy; 2024 Andrés Occhipinti Liberman. Web design based on: <a href="http://html5up.net">HTML5 UP</a>. Line art drawings: Matthew Leadbeater</p>
+        <p style="font-size:12.5px">&copy; 2024 Andrés Occhipinti Liberman. Web design based on: <a href="http://html5up.net">HTML5 UP</a>. Line art drawings by Matthew Leadbeater.</p>
 
     </div>
 
