--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Andrés Occhipinti Liberman</title>
     <meta name="google-site-verification" content="9eeSVX8wJksFzanJFQaYgD-Mdoxk9V9gWnG_iVg8HsQ" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
     <meta itemprop="name" content="Andrés Occhipinti Liberman">
     <meta charset="UTF-8">
     <meta name="description" content="Personal website of Andrés Occhipinti Liberman. Researcher in Artificial Intelligence.">
