--- a/publications.html
+++ b/publications.html
@@ -3,16 +3,9 @@
 	<head>
 		<title>Andrés Occhipinti Liberman | publications</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<style>
-			@media (max-width: 600px) {
-				#main .container ol {
-					text-align: left;
-				}
-			}
-		</style>
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -26,6 +19,7 @@
 							<li><a href="teaching.html">teaching</a></li>
 							<li><a href="activities.html">activities</a></li>
 							<li><a href="contact.html" class="button primary">contact</a></li>
+
 						</ul>
 					</nav>
 				</header>
