--- a/teaching.html
+++ b/teaching.html
@@ -32,12 +32,11 @@
 								<h1>Teaching</h1>
 								<h2>Lecturer</h2>
 								<ol>
-				
+									<li> <strong>Natural Language Processing II.</a></strong> 
+										<br/> ICAI-Comillas University. Autumn 2024. 
+									</li>
 									<li> <strong>Natural Language Processing I.</a></strong> 
 										<br/> ICAI-Comillas University. Spring 2024. 
-									</li>
-									<li> <strong>Natural Language Processing II.</a></strong> 
-										<br/> ICAI-Comillas University. Autummn 2024. 
 									</li>
 									<li> <strong>Foundations of Artificial Intelligence.</a></strong> 
 										<br/> ICAI-Comillas University. Autumn 2023, Autumn 2024. 
