--- a/teaching.html
+++ b/teaching.html
@@ -36,7 +36,7 @@
 										<br/> ICAI-Comillas University. Autumn 2024. 
 									</li>
 									<li> <strong>Natural Language Processing I.</a></strong> 
-										<br/> ICAI-Comillas University. Spring 2024. 
+										<br/> ICAI-Comillas University. Spring 2024, Spring 2025. 
 									</li>
 									<li> <strong>Foundations of Artificial Intelligence.</a></strong> 
 										<br/> ICAI-Comillas University. Autumn 2023, Autumn 2024. 
